# CiPlay-service

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
ciplay_service/: api.py  main.py  models.py  settings.py
migrations/: env.py
migrations/versions/: 77f6f59a2816_init.py
tests/: test_main.py
